--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,11 @@
 .pioenvs
 .piolibdeps
-*-bak
-*.bak
-*-cache.lib
 fp-lib-table
-.DS_Store
-_saved*
-_autosave*
-driver/.Python
-driver/src
-driver/lib
-driver/bin
-driver/include
 *.DS_Store
 hardware/*.pdf
+hardware/*.svg
+hardware/*.bak
+hardware/*-bak
+hardware/*-cache*
+hardware/*_saved*
+hardware/*_autosave*
