--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:attiny25]
+[env:urchin]
 platform = atmelavr
 framework = arduino
-board = attiny25
+board = urchin
